--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ button {
     border: none;
     outline: none;
     box-shadow: none;
+    padding: 0;
+    margin: 0;
 }
 
 button:active, button:focus {
@@ -28,7 +30,7 @@ body {
 
 .sidebar {
     display: grid;
-    background-color: rgb(165, 255, 143);
+    background-color: #16a34a;
     grid-row: 1/3;
     grid-template-rows: 1fr repeat(19, 1fr);
     align-items: center;
@@ -81,7 +83,7 @@ body {
 }
 
 .header {
-    background-color: white;
+    background-color: #f0fdf4;
     grid-area: 1/2/2/3;
     display: grid;
     grid-template-rows: 1fr 1fr;
@@ -101,6 +103,10 @@ body {
     width:85%;
 }
 
+.topHalf :nth-child(4) {
+    border-radius: 50%;
+}
+
 .bottomHalf {
     display: grid;
     align-items: center;
@@ -117,7 +123,7 @@ body {
 }
 
 .mainContent {
-    background-color: rgb(240, 247, 240);
+    background-color: #dcfce7;
     grid-area: 2/2/3/3;
     display: grid;
     grid-template-columns: 5fr 2fr;
