--- a/style.css
+++ b/style.css
@@ -30,13 +30,15 @@ body {
 
 .sidebar {
     display: grid;
-    background-color: #16a34a;
+    background-color: #d4d4d4;
     grid-row: 1/3;
     grid-template-rows: 1fr repeat(19, 1fr);
     align-items: center;
+    padding: 1rem
 }
 
 .sidebarContent {
+    font-size: 1.2rem;
     display: grid;
     align-items: center;
     grid-template-columns: 2fr 8fr;
@@ -44,6 +46,11 @@ body {
 
 .sidebarContent img {
     justify-self: center ;
+}
+
+.logoSection {
+    font-size: 2rem;
+    font-weight: bold;
 }
 
 .home {
@@ -83,12 +90,14 @@ body {
 }
 
 .header {
-    background-color: #f0fdf4;
+    background-color: #fafafa;
     grid-area: 1/2/2/3;
     display: grid;
     grid-template-rows: 1fr 1fr;
     align-items: center;
-    padding: 0 4% 0 4%;
+    padding: 0 4% 1% 4%;
+    position: relative;
+    box-shadow: 4px 3px 5px 1px rgba(66, 66, 66, 0.459);
 }
 
 .topHalf {
@@ -103,8 +112,17 @@ body {
     width:85%;
 }
 
-.topHalf :nth-child(4) {
+.topHalf .imgWrapr {
     border-radius: 50%;
+    overflow: clip;
+    max-width: 50px;
+    max-height: 50px;
+}
+
+.topHalf .imgWrapr img {
+    position: relative;
+    right: 80px;
+    bottom: 40px
 }
 
 .bottomHalf {
@@ -113,8 +131,18 @@ body {
     grid-template-columns: 1fr 16fr 2fr 2fr 2fr;
 }
 
-.bottomHalf img {
+.bottomHalf .imgWrapr {
     justify-self: end;
+    border-radius: 50%;
+    overflow: clip;
+    width: 100px;
+    height: 100px;
+}
+
+.bottomHalf .imgWrapr img {
+    position: relative;
+    right: 110px;
+    bottom: 40px
 }
 
 .bottomHalf .text {
@@ -123,7 +151,7 @@ body {
 }
 
 .mainContent {
-    background-color: #dcfce7;
+    background-color: #f5f5f5;
     grid-area: 2/2/3/3;
     display: grid;
     grid-template-columns: 5fr 2fr;
@@ -226,8 +254,36 @@ body {
     align-items: center;
 }
 
-.trending img {
+.trending .imgWrapr {
+    border-radius: 50%;
+    overflow: clip;
+    max-width: 60px;
+    max-height: 60px;
     justify-self: center;
+}
+
+.acc1 img {
+    position: relative;
+    bottom: 10px;
+    right:20px
+}
+
+.acc2 img {
+    position: relative;
+    bottom: 30px;
+    right:70px
+}
+
+.acc3 img {
+    position: relative;
+    bottom: 50px;
+    right:20px
+}
+
+.acc4 img {
+    position: relative;
+    bottom:20px;
+    right:10px
 }
 
 .textWrapr {
