--- a/style.css
+++ b/style.css
@@ -3,17 +3,25 @@
     font-family: sans-serif;
 }
 
-button {
-    background: none;
-    border: none;
-    outline: none;
-    box-shadow: none;
-    padding: 0;
-    margin: 0;
+a, a:hover, a:focus, a:active {
+    text-decoration: none;
+    color: inherit;
 }
 
-button:active, button:focus {
-    outline: none;
+input, textarea, button, select {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+    padding: 0;
+	background: none;
+	border: none;
+	border-radius: 0;
+	outline: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+    width: 100%;
+    display: block;
 }
 
 html {
@@ -30,7 +38,7 @@ body {
 
 .sidebar {
     display: grid;
-    background-color: #d4d4d4;
+    background-color: #a3a3a3;
     grid-row: 1/3;
     grid-template-rows: 1fr repeat(19, 1fr);
     align-items: center;
@@ -104,12 +112,23 @@ body {
     display: grid;
     justify-items: center;
     align-items: center;
-    grid-template-columns: 1fr 25fr 2fr 2fr 3fr;
+    grid-template-columns: 1fr 24fr 1fr 1.5fr 3fr;
+    column-gap: 5px;
 }
 
+.search {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
 .topHalf input {
     justify-self: start;
-    width:85%;
+    width:90%;
+    height: 40px;
+    font-size: 1.3rem;
+    background-color: #e5e5e5;
+    border-radius: 20px;
+    padding:0 3% 0 1%;
 }
 
 .topHalf .imgWrapr {
@@ -125,10 +144,16 @@ body {
     bottom: 40px
 }
 
+.accName {
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
 .bottomHalf {
     display: grid;
     align-items: center;
     grid-template-columns: 1fr 16fr 2fr 2fr 2fr;
+    column-gap: 10px;
 }
 
 .bottomHalf .imgWrapr {
@@ -150,8 +175,30 @@ body {
     padding-left: 1rem;
 }
 
+.bottomHalf .text div:first-child {
+    font-weight: 700;
+}
+
+.bottomHalf .text div:last-child {
+    font-weight: 500;
+    font-size: 2rem
+}
+
+.new, .upload, .shareButn {
+    background-color: #a3a3a3;
+    width: 120px;
+    height: 40px;
+    border-radius: 20px;
+    font-size: 0.9rem;
+    font-weight: 700;
+}
+
+button:hover {
+    background-color:#e5e5e5;
+}
+
 .mainContent {
-    background-color: #f5f5f5;
+    background-color: #e5e5e5;
     grid-area: 2/2/3/3;
     display: grid;
     grid-template-columns: 5fr 2fr;
@@ -226,7 +273,7 @@ body {
 }
 
 .sec1, .sec2 {
-    border-bottom: rgba(0, 0, 0, 0.479) 2px solid;
+    border-bottom: rgba(0, 0, 0, 0.479) 1px solid;
 }
 
 .announcements h4 {
@@ -264,7 +311,7 @@ body {
 
 .acc1 img {
     position: relative;
-    bottom: 10px;
+    bottom: 0px;
     right:20px
 }
 
