--- a/style.css
+++ b/style.css
@@ -140,6 +140,12 @@ body {
     padding:0 3% 0 1%;
 }
 
+.notif {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+
 .topHalf .imgWrapr {
     border-radius: 50%;
     overflow: clip;
@@ -223,8 +229,10 @@ button:hover {
 }
 
 .name {
+    padding-left: 0.5rem;
     font-size: 1.8rem;
     font-weight: bold;
+    align-self: center;
 }
 
 .cards {
@@ -235,11 +243,21 @@ button:hover {
 }
 
 .cards > div {
+    position: relative;
+    overflow: clip;
     display: grid;
     background-color: white;
     border-radius: 20px;
-    padding: 2.5rem 1.5rem 2rem 1.5rem;
+    padding: 2.5rem 1.5rem 2rem 3rem;
     grid-template-rows: 1fr 50px;
+    box-shadow: 4px 3px 5px 1px rgba(66, 66, 66, 0.459);
+}
+
+.cards > div .line {
+    position: absolute;
+    background-color: aqua;
+    height: 100%;
+    width: 10px;
 }
 
 .Ccont {
@@ -250,6 +268,8 @@ button:hover {
 .cards .title {
     font-size: 1.5rem;
     font-weight: 500;
+    font-family:Arial, Helvetica, sans-serif;
+    padding-bottom: 2px;
 }
 
 .cards .text {
@@ -281,6 +301,7 @@ button:hover {
     padding: 2rem;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
+    box-shadow: 4px 3px 5px 1px rgba(66, 66, 66, 0.459);
 }
 
 .sec1, .sec2 {
@@ -304,6 +325,7 @@ button:hover {
     padding: 2rem;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr 1fr;
+    box-shadow: 4px 3px 5px 1px rgba(66, 66, 66, 0.459);
 }
 
 .content button {
